# FooTerm-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
includes/: eventloop.hpp  panel.hpp  ssh.hpp  term_windows.hpp  vte.hpp
src/: eventloop.cpp  main.cpp  panel.cpp  ssh.cpp  term_windows.cpp  vte.cpp
